--- a/data_ETL.ipynb
+++ b/data_ETL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ecfb2f01",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,14 @@
     "# import files\n",
     "! pip install pandas -q\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import numpy as np0\n",
+    "import matplotlib.pyplot as plt\n",
+    "import sqlalchemy as sal"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "c3c0873d",
    "metadata": {},
    "outputs": [
@@ -663,7 +665,7 @@
        "[20 rows x 70 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "46deb524",
    "metadata": {},
    "outputs": [
@@ -769,7 +771,7 @@
        "(266, 70)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "10b5649b",
    "metadata": {},
    "outputs": [
@@ -892,7 +894,7 @@
        "4               EEG  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -901,14 +903,12 @@
     "# Get list of countries\n",
     "countries_data = pd.read_csv('un_member_iso_region.csv')\n",
     "countries_data.info()\n",
-    "countries_data.head()\n",
-    "\n",
-    "\n"
+    "countries_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "38b68635",
    "metadata": {},
    "outputs": [
@@ -1099,207 +1099,48 @@
        "      <td>3.47</td>\n",
        "      <td>Eastern Mediterranean</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>187</th>\n",
-       "      <td>Samoa</td>\n",
-       "      <td>WSM</td>\n",
-       "      <td>211944.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>188</th>\n",
-       "      <td>Yemen, Rep.</td>\n",
-       "      <td>YEM</td>\n",
-       "      <td>36134863.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>189</th>\n",
-       "      <td>South Africa</td>\n",
-       "      <td>ZAF</td>\n",
-       "      <td>60562381.0</td>\n",
-       "      <td>South Africa</td>\n",
-       "      <td>452529.0</td>\n",
-       "      <td>7067.0</td>\n",
-       "      <td>274925.0</td>\n",
-       "      <td>170537.0</td>\n",
-       "      <td>7096.0</td>\n",
-       "      <td>298.0</td>\n",
-       "      <td>9848.0</td>\n",
-       "      <td>1.56</td>\n",
-       "      <td>60.75</td>\n",
-       "      <td>2.57</td>\n",
-       "      <td>373628.0</td>\n",
-       "      <td>78901.0</td>\n",
-       "      <td>21.12</td>\n",
-       "      <td>Africa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>190</th>\n",
-       "      <td>Zambia</td>\n",
-       "      <td>ZMB</td>\n",
-       "      <td>19059395.0</td>\n",
-       "      <td>Zambia</td>\n",
-       "      <td>4552.0</td>\n",
-       "      <td>140.0</td>\n",
-       "      <td>2815.0</td>\n",
-       "      <td>1597.0</td>\n",
-       "      <td>71.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>465.0</td>\n",
-       "      <td>3.08</td>\n",
-       "      <td>61.84</td>\n",
-       "      <td>4.97</td>\n",
-       "      <td>3326.0</td>\n",
-       "      <td>1226.0</td>\n",
-       "      <td>36.86</td>\n",
-       "      <td>Africa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>191</th>\n",
-       "      <td>Zimbabwe</td>\n",
-       "      <td>ZWE</td>\n",
-       "      <td>15526888.0</td>\n",
-       "      <td>Zimbabwe</td>\n",
-       "      <td>2704.0</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>542.0</td>\n",
-       "      <td>2126.0</td>\n",
-       "      <td>192.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>1.33</td>\n",
-       "      <td>20.04</td>\n",
-       "      <td>6.64</td>\n",
-       "      <td>1713.0</td>\n",
-       "      <td>991.0</td>\n",
-       "      <td>57.85</td>\n",
-       "      <td>Africa</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>192 rows × 18 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "             Country Name Country Code        2020        Country/Region  \\\n",
-       "0             Afghanistan          AFG  39068979.0           Afghanistan   \n",
-       "1                  Angola          AGO  33451132.0                Angola   \n",
-       "2                 Albania          ALB   2837849.0               Albania   \n",
-       "3                 Andorra          AND     77380.0               Andorra   \n",
-       "4    United Arab Emirates          ARE   9401038.0  United Arab Emirates   \n",
-       "..                    ...          ...         ...                   ...   \n",
-       "187                 Samoa          WSM    211944.0                   NaN   \n",
-       "188           Yemen, Rep.          YEM  36134863.0                   NaN   \n",
-       "189          South Africa          ZAF  60562381.0          South Africa   \n",
-       "190                Zambia          ZMB  19059395.0                Zambia   \n",
-       "191              Zimbabwe          ZWE  15526888.0              Zimbabwe   \n",
+       "           Country Name Country Code        2020        Country/Region  \\\n",
+       "0           Afghanistan          AFG  39068979.0           Afghanistan   \n",
+       "1                Angola          AGO  33451132.0                Angola   \n",
+       "2               Albania          ALB   2837849.0               Albania   \n",
+       "3               Andorra          AND     77380.0               Andorra   \n",
+       "4  United Arab Emirates          ARE   9401038.0  United Arab Emirates   \n",
        "\n",
-       "     Confirmed  Deaths  Recovered    Active  New cases  New deaths  \\\n",
-       "0      36263.0  1269.0    25198.0    9796.0      106.0        10.0   \n",
-       "1        950.0    41.0      242.0     667.0       18.0         1.0   \n",
-       "2       4880.0   144.0     2745.0    1991.0      117.0         6.0   \n",
-       "3        907.0    52.0      803.0      52.0       10.0         0.0   \n",
-       "4      59177.0   345.0    52510.0    6322.0      264.0         1.0   \n",
-       "..         ...     ...        ...       ...        ...         ...   \n",
-       "187        NaN     NaN        NaN       NaN        NaN         NaN   \n",
-       "188        NaN     NaN        NaN       NaN        NaN         NaN   \n",
-       "189   452529.0  7067.0   274925.0  170537.0     7096.0       298.0   \n",
-       "190     4552.0   140.0     2815.0    1597.0       71.0         1.0   \n",
-       "191     2704.0    36.0      542.0    2126.0      192.0         2.0   \n",
+       "   Confirmed  Deaths  Recovered  Active  New cases  New deaths  New recovered  \\\n",
+       "0    36263.0  1269.0    25198.0  9796.0      106.0        10.0           18.0   \n",
+       "1      950.0    41.0      242.0   667.0       18.0         1.0            0.0   \n",
+       "2     4880.0   144.0     2745.0  1991.0      117.0         6.0           63.0   \n",
+       "3      907.0    52.0      803.0    52.0       10.0         0.0            0.0   \n",
+       "4    59177.0   345.0    52510.0  6322.0      264.0         1.0          328.0   \n",
        "\n",
-       "     New recovered  Deaths / 100 Cases  Recovered / 100 Cases  \\\n",
-       "0             18.0                3.50                  69.49   \n",
-       "1              0.0                4.32                  25.47   \n",
-       "2             63.0                2.95                  56.25   \n",
-       "3              0.0                5.73                  88.53   \n",
-       "4            328.0                0.58                  88.73   \n",
-       "..             ...                 ...                    ...   \n",
-       "187            NaN                 NaN                    NaN   \n",
-       "188            NaN                 NaN                    NaN   \n",
-       "189         9848.0                1.56                  60.75   \n",
-       "190          465.0                3.08                  61.84   \n",
-       "191           24.0                1.33                  20.04   \n",
+       "   Deaths / 100 Cases  Recovered / 100 Cases  Deaths / 100 Recovered  \\\n",
+       "0                3.50                  69.49                    5.04   \n",
+       "1                4.32                  25.47                   16.94   \n",
+       "2                2.95                  56.25                    5.25   \n",
+       "3                5.73                  88.53                    6.48   \n",
+       "4                0.58                  88.73                    0.66   \n",
        "\n",
-       "     Deaths / 100 Recovered  Confirmed last week  1 week change  \\\n",
-       "0                      5.04              35526.0          737.0   \n",
-       "1                     16.94                749.0          201.0   \n",
-       "2                      5.25               4171.0          709.0   \n",
-       "3                      6.48                884.0           23.0   \n",
-       "4                      0.66              57193.0         1984.0   \n",
-       "..                      ...                  ...            ...   \n",
-       "187                     NaN                  NaN            NaN   \n",
-       "188                     NaN                  NaN            NaN   \n",
-       "189                    2.57             373628.0        78901.0   \n",
-       "190                    4.97               3326.0         1226.0   \n",
-       "191                    6.64               1713.0          991.0   \n",
+       "   Confirmed last week  1 week change  1 week % increase  \\\n",
+       "0              35526.0          737.0               2.07   \n",
+       "1                749.0          201.0              26.84   \n",
+       "2               4171.0          709.0              17.00   \n",
+       "3                884.0           23.0               2.60   \n",
+       "4              57193.0         1984.0               3.47   \n",
        "\n",
-       "     1 week % increase             WHO Region  \n",
-       "0                 2.07  Eastern Mediterranean  \n",
-       "1                26.84                 Africa  \n",
-       "2                17.00                 Europe  \n",
-       "3                 2.60                 Europe  \n",
-       "4                 3.47  Eastern Mediterranean  \n",
-       "..                 ...                    ...  \n",
-       "187                NaN                    NaN  \n",
-       "188                NaN                    NaN  \n",
-       "189              21.12                 Africa  \n",
-       "190              36.86                 Africa  \n",
-       "191              57.85                 Africa  \n",
-       "\n",
-       "[192 rows x 18 columns]"
+       "              WHO Region  \n",
+       "0  Eastern Mediterranean  \n",
+       "1                 Africa  \n",
+       "2                 Europe  \n",
+       "3                 Europe  \n",
+       "4  Eastern Mediterranean  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1314,25 +1155,98 @@
     "    merged_data = pd.merge(un_countries,corona_cases,left_on = 'Country Name',right_on ='Country/Region', how='left')\n",
     "    return merged_data\n",
     "\n",
-    "clean_Data(population_data)\n"
+    "final_data = clean_Data(population_data)\n",
+    "final_data.head()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2ce092b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 192 entries, 0 to 191\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   Country Name  192 non-null    object \n",
+      " 1   Country Code  192 non-null    object \n",
+      " 2   2020          192 non-null    float64\n",
+      " 3   Confirmed     158 non-null    float64\n",
+      " 4   Deaths        158 non-null    float64\n",
+      " 5   Recovered     158 non-null    float64\n",
+      " 6   Active        158 non-null    float64\n",
+      " 7   New cases     158 non-null    float64\n",
+      " 8   New deaths    158 non-null    float64\n",
+      " 9   WHO Region    158 non-null    object \n",
+      "dtypes: float64(7), object(3)\n",
+      "memory usage: 15.1+ KB\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 192 entries, 0 to 191\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   Country Name  192 non-null    object \n",
+      " 1   Country Code  192 non-null    object \n",
+      " 2   2020          192 non-null    float64\n",
+      " 3   Confirmed     192 non-null    float64\n",
+      " 4   Deaths        192 non-null    float64\n",
+      " 5   Recovered     192 non-null    float64\n",
+      " 6   Active        192 non-null    float64\n",
+      " 7   New cases     192 non-null    float64\n",
+      " 8   New deaths    192 non-null    float64\n",
+      " 9   WHO Region    192 non-null    object \n",
+      "dtypes: float64(7), object(3)\n",
+      "memory usage: 15.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Further transformations\n",
+    "corona_population = final_data.drop(final_data[['Country/Region','New recovered','Deaths / 100 Cases','Recovered / 100 Cases','Deaths / 100 Recovered','Confirmed last week','1 week change','1 week % increase']],axis=1)\n",
+    "corona_population.info()\n",
+    "\n",
+    "#Fill missing values\n",
+    "corona_population.fillna(0.0, inplace= True)\n",
+    "corona_population.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "id": "b5dfab45",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Load\n",
+    "engine = sal.create_engine(\"mssql://DESKTOP-DH5GQN6\\\\SQLEXPRESS/ETL_PIPELINE?driver=ODBC+DRIVER+17+FOR+SQL+SERVER\")\n",
+    "conn = engine.connect()\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "edef9543",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "192"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Merge the data\n"
+    "corona_population.to_sql(\"population_corona dataset \",con=conn, index=False, if_exists='replace')\n"
    ]
   }
  ],
