Describe your changes here

--- a/data_ETL.ipynb
+++ b/data_ETL.ipynb
@@ -2,22 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ecfb2f01",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 25.0.1 -> 25.2\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
    "source": [
     "# import files\n",
     "! pip install pandas -q\n",
     "import pandas as pd\n",
-    "import numpy as np0\n",
-    "import matplotlib.pyplot as plt\n",
-    "import sqlalchemy as sal"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "c3c0873d",
    "metadata": {},
    "outputs": [
@@ -665,7 +673,7 @@
        "[20 rows x 70 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "46deb524",
    "metadata": {},
    "outputs": [
@@ -771,7 +779,7 @@
        "(266, 70)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "10b5649b",
    "metadata": {},
    "outputs": [
@@ -894,7 +902,7 @@
        "4               EEG  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -908,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "38b68635",
    "metadata": {},
    "outputs": [
@@ -948,203 +956,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ebbf7c09",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Country Name</th>\n",
-       "      <th>Country Code</th>\n",
-       "      <th>2020</th>\n",
-       "      <th>Country/Region</th>\n",
-       "      <th>Confirmed</th>\n",
-       "      <th>Deaths</th>\n",
-       "      <th>Recovered</th>\n",
-       "      <th>Active</th>\n",
-       "      <th>New cases</th>\n",
-       "      <th>New deaths</th>\n",
-       "      <th>New recovered</th>\n",
-       "      <th>Deaths / 100 Cases</th>\n",
-       "      <th>Recovered / 100 Cases</th>\n",
-       "      <th>Deaths / 100 Recovered</th>\n",
-       "      <th>Confirmed last week</th>\n",
-       "      <th>1 week change</th>\n",
-       "      <th>1 week % increase</th>\n",
-       "      <th>WHO Region</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>AFG</td>\n",
-       "      <td>39068979.0</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>36263.0</td>\n",
-       "      <td>1269.0</td>\n",
-       "      <td>25198.0</td>\n",
-       "      <td>9796.0</td>\n",
-       "      <td>106.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>3.50</td>\n",
-       "      <td>69.49</td>\n",
-       "      <td>5.04</td>\n",
-       "      <td>35526.0</td>\n",
-       "      <td>737.0</td>\n",
-       "      <td>2.07</td>\n",
-       "      <td>Eastern Mediterranean</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Angola</td>\n",
-       "      <td>AGO</td>\n",
-       "      <td>33451132.0</td>\n",
-       "      <td>Angola</td>\n",
-       "      <td>950.0</td>\n",
-       "      <td>41.0</td>\n",
-       "      <td>242.0</td>\n",
-       "      <td>667.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4.32</td>\n",
-       "      <td>25.47</td>\n",
-       "      <td>16.94</td>\n",
-       "      <td>749.0</td>\n",
-       "      <td>201.0</td>\n",
-       "      <td>26.84</td>\n",
-       "      <td>Africa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Albania</td>\n",
-       "      <td>ALB</td>\n",
-       "      <td>2837849.0</td>\n",
-       "      <td>Albania</td>\n",
-       "      <td>4880.0</td>\n",
-       "      <td>144.0</td>\n",
-       "      <td>2745.0</td>\n",
-       "      <td>1991.0</td>\n",
-       "      <td>117.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>63.0</td>\n",
-       "      <td>2.95</td>\n",
-       "      <td>56.25</td>\n",
-       "      <td>5.25</td>\n",
-       "      <td>4171.0</td>\n",
-       "      <td>709.0</td>\n",
-       "      <td>17.00</td>\n",
-       "      <td>Europe</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Andorra</td>\n",
-       "      <td>AND</td>\n",
-       "      <td>77380.0</td>\n",
-       "      <td>Andorra</td>\n",
-       "      <td>907.0</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>803.0</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5.73</td>\n",
-       "      <td>88.53</td>\n",
-       "      <td>6.48</td>\n",
-       "      <td>884.0</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>2.60</td>\n",
-       "      <td>Europe</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>United Arab Emirates</td>\n",
-       "      <td>ARE</td>\n",
-       "      <td>9401038.0</td>\n",
-       "      <td>United Arab Emirates</td>\n",
-       "      <td>59177.0</td>\n",
-       "      <td>345.0</td>\n",
-       "      <td>52510.0</td>\n",
-       "      <td>6322.0</td>\n",
-       "      <td>264.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>328.0</td>\n",
-       "      <td>0.58</td>\n",
-       "      <td>88.73</td>\n",
-       "      <td>0.66</td>\n",
-       "      <td>57193.0</td>\n",
-       "      <td>1984.0</td>\n",
-       "      <td>3.47</td>\n",
-       "      <td>Eastern Mediterranean</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           Country Name Country Code        2020        Country/Region  \\\n",
-       "0           Afghanistan          AFG  39068979.0           Afghanistan   \n",
-       "1                Angola          AGO  33451132.0                Angola   \n",
-       "2               Albania          ALB   2837849.0               Albania   \n",
-       "3               Andorra          AND     77380.0               Andorra   \n",
-       "4  United Arab Emirates          ARE   9401038.0  United Arab Emirates   \n",
-       "\n",
-       "   Confirmed  Deaths  Recovered  Active  New cases  New deaths  New recovered  \\\n",
-       "0    36263.0  1269.0    25198.0  9796.0      106.0        10.0           18.0   \n",
-       "1      950.0    41.0      242.0   667.0       18.0         1.0            0.0   \n",
-       "2     4880.0   144.0     2745.0  1991.0      117.0         6.0           63.0   \n",
-       "3      907.0    52.0      803.0    52.0       10.0         0.0            0.0   \n",
-       "4    59177.0   345.0    52510.0  6322.0      264.0         1.0          328.0   \n",
-       "\n",
-       "   Deaths / 100 Cases  Recovered / 100 Cases  Deaths / 100 Recovered  \\\n",
-       "0                3.50                  69.49                    5.04   \n",
-       "1                4.32                  25.47                   16.94   \n",
-       "2                2.95                  56.25                    5.25   \n",
-       "3                5.73                  88.53                    6.48   \n",
-       "4                0.58                  88.73                    0.66   \n",
-       "\n",
-       "   Confirmed last week  1 week change  1 week % increase  \\\n",
-       "0              35526.0          737.0               2.07   \n",
-       "1                749.0          201.0              26.84   \n",
-       "2               4171.0          709.0              17.00   \n",
-       "3                884.0           23.0               2.60   \n",
-       "4              57193.0         1984.0               3.47   \n",
-       "\n",
-       "              WHO Region  \n",
-       "0  Eastern Mediterranean  \n",
-       "1                 Africa  \n",
-       "2                 Europe  \n",
-       "3                 Europe  \n",
-       "4  Eastern Mediterranean  "
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#clean data\n",
     "def clean_Data(data):\n",
@@ -1153,15 +968,15 @@
     "    un_countries = clean_pop_data [clean_pop_data['Country Code'].isin(countries_data['iso3'])]\n",
     "    #Merge data with COVID-19 cases\n",
     "    merged_data = pd.merge(un_countries,corona_cases,left_on = 'Country Name',right_on ='Country/Region', how='left')\n",
-    "    return merged_data\n",
+    "    corona_un = merged_data.drop(['Deaths / 100 Cases','Recovered / 100 Cases','Deaths / 100 Recovered','Confirmed last week','1 week change','Country/Region'], axis = 1)\n",
+    "    return corona_un\n",
     "\n",
-    "final_data = clean_Data(population_data)\n",
-    "final_data.head()\n"
+    "UN_Corona =clean_Data(population_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "2ce092b2",
    "metadata": {},
    "outputs": [
@@ -1171,88 +986,93 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 192 entries, 0 to 191\n",
-      "Data columns (total 10 columns):\n",
-      " #   Column        Non-Null Count  Dtype  \n",
-      "---  ------        --------------  -----  \n",
-      " 0   Country Name  192 non-null    object \n",
-      " 1   Country Code  192 non-null    object \n",
-      " 2   2020          192 non-null    float64\n",
-      " 3   Confirmed     158 non-null    float64\n",
-      " 4   Deaths        158 non-null    float64\n",
-      " 5   Recovered     158 non-null    float64\n",
-      " 6   Active        158 non-null    float64\n",
-      " 7   New cases     158 non-null    float64\n",
-      " 8   New deaths    158 non-null    float64\n",
-      " 9   WHO Region    158 non-null    object \n",
-      "dtypes: float64(7), object(3)\n",
-      "memory usage: 15.1+ KB\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   Country Name       192 non-null    object \n",
+      " 1   Country Code       192 non-null    object \n",
+      " 2   2020               192 non-null    float64\n",
+      " 3   Confirmed          192 non-null    float64\n",
+      " 4   Deaths             192 non-null    float64\n",
+      " 5   Recovered          192 non-null    float64\n",
+      " 6   Active             192 non-null    float64\n",
+      " 7   New cases          192 non-null    float64\n",
+      " 8   New deaths         192 non-null    float64\n",
+      " 9   New recovered      192 non-null    float64\n",
+      " 10  1 week % increase  192 non-null    float64\n",
+      " 11  WHO Region         192 non-null    object \n",
+      "dtypes: float64(9), object(3)\n",
+      "memory usage: 18.1+ KB\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 192 entries, 0 to 191\n",
-      "Data columns (total 10 columns):\n",
-      " #   Column        Non-Null Count  Dtype  \n",
-      "---  ------        --------------  -----  \n",
-      " 0   Country Name  192 non-null    object \n",
-      " 1   Country Code  192 non-null    object \n",
-      " 2   2020          192 non-null    float64\n",
-      " 3   Confirmed     192 non-null    float64\n",
-      " 4   Deaths        192 non-null    float64\n",
-      " 5   Recovered     192 non-null    float64\n",
-      " 6   Active        192 non-null    float64\n",
-      " 7   New cases     192 non-null    float64\n",
-      " 8   New deaths    192 non-null    float64\n",
-      " 9   WHO Region    192 non-null    object \n",
-      "dtypes: float64(7), object(3)\n",
-      "memory usage: 15.1+ KB\n"
+      "Data columns (total 12 columns):\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   Country Name       192 non-null    object \n",
+      " 1   Country Code       192 non-null    object \n",
+      " 2   Population 2020    192 non-null    float64\n",
+      " 3   Confirmed          192 non-null    float64\n",
+      " 4   Deaths             192 non-null    float64\n",
+      " 5   Recovered          192 non-null    float64\n",
+      " 6   Active             192 non-null    float64\n",
+      " 7   New cases          192 non-null    float64\n",
+      " 8   New deaths         192 non-null    float64\n",
+      " 9   New recovered      192 non-null    float64\n",
+      " 10  1 week % increase  192 non-null    float64\n",
+      " 11  WHO Region         192 non-null    object \n",
+      "dtypes: float64(9), object(3)\n",
+      "memory usage: 18.1+ KB\n"
      ]
     }
    ],
    "source": [
-    "#Further transformations\n",
-    "corona_population = final_data.drop(final_data[['Country/Region','New recovered','Deaths / 100 Cases','Recovered / 100 Cases','Deaths / 100 Recovered','Confirmed last week','1 week change','1 week % increase']],axis=1)\n",
-    "corona_population.info()\n",
     "\n",
     "#Fill missing values\n",
-    "corona_population.fillna(0.0, inplace= True)\n",
-    "corona_population.info()"
+    "UN_Corona.fillna(0.0, inplace= True)\n",
+    "UN_Corona.info()\n",
+    "#Rename columns\n",
+    "UN_Corona = UN_Corona.rename(columns={'2020':'Population 2020'})\n",
+    "UN_Corona.info()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "id": "b5dfab45",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Load\n",
+    "import sqlalchemy as sal\n",
     "engine = sal.create_engine(\"mssql://DESKTOP-DH5GQN6\\\\SQLEXPRESS/ETL_PIPELINE?driver=ODBC+DRIVER+17+FOR+SQL+SERVER\")\n",
     "conn = engine.connect()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "edef9543",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "192"
+       "18"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "corona_population.to_sql(\"population_corona dataset \",con=conn, index=False, if_exists='replace')\n"
+    "UN_Corona.to_sql(\"population_covid19\",con=conn, index=False, if_exists='replace')\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1266,7 +1086,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
